fix: small alignment adjustment
I noticed a small alignment error in the title "Senha atual chamada" so I quickly fixed it, a change of only 10px

--- a/src/components/CSS/senhaAtual.css
+++ b/src/components/CSS/senhaAtual.css
@@ -4,7 +4,7 @@
     width: 862px;
     height: 698px;
     border-radius: 40px;
-    gap: 46px;
+    gap: 36px;
     background: #FFFCFC;
     box-shadow: 0px 6px 31px -6px #00000040;
     font-family: Inter;
